kustomize/bitwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
spec:
  serviceName: bitwarden
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
      containers:
      - name: bitwarden
        image: vaultwarden/server:1.28.1-alpine
        ports:
        - name: http
          containerPort: 8080
        - name: notifications
          containerPort: 3012
        livenessProbe:
          httpGet:
            path: /alive
            port: http
          periodSeconds: 60
          timeoutSeconds: 30
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /alive
            port: http
          periodSeconds: 30
          timeoutSeconds: 30
          initialDelaySeconds: 5
        volumeMounts:
        - name: data
          mountPath: /data
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      terminationGracePeriodSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1Gi"
      storageClassName: nfs-data
