kustomize/bitwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitwarden
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    projectcontour.io/response-timeout: 120s
    projectcontour.io/websocket-routes: "/notifications/hub"
spec:
  rules:
  - host: bw.tools.kilchhofer.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitwarden
            port:
              name: bitwarden-api
      - path: /notifications/hub/negotiate
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitwarden
            port:
              name: bitwarden-api
      - path: /notifications/hub
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitwarden
            port:
              name: notifications
  tls:
  - hosts:
    - bw.tools.kilchhofer.info
    secretName: bitwarden-cert
