kustomize/bitwarden/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bitwarden
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bitwarden
  policyTypes:
    - Egress
    - Ingress
  egress:
    - ports:
      # Notification via E-Mail
      - port: 465
        protocol: TCP
      # Check for updates
      - port: 443
        protocol: TCP
  ingress:
    - ports:
      - port: http
        protocol: TCP
      - port: notifications
        protocol: TCP
